--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "pug": "^2.0.0-rc.4",
     "qiniu": "^7.1.0",
     "redis": "^2.8.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "sequelize": "^4.17.2",
     "ueditor": "^1.2.3"
   },
